--- a/dotnet/CrmBlazorApp/appsettings.Development.json
+++ b/dotnet/CrmBlazorApp/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CrmDb": "Host=localhost;Port=32768;Database=appdb;Username=appdb_appuser;Password=appsecret"
   }
 }
